# PG-DAC-23

./: .gitignore  README.md
Advanced Java/Books_auth_hib/: .project
Advanced Java/Day6JavaBean/: .project
Advanced Java/Day_5_lab/: .project
Advanced Java/JDBC_servlet_demo/: .project
Dotnet/: .gitignore
Dotnet/ASPDay1/: ASPDay1.sln
Java/: ArmstronNum.java  Arr1.java  EvenSum.java  GreatestNum.java  Pallindrome.java  PizzaShop.java  Power.java  PrimeNumbers.java  PrimeNums.java  ReverseNum.java  SeriesSum.java
Linux Shell Scripts/: Assignment.txt  alphabetpyramid (1).sh  alphabetpyramid.sh  alphapyramid.sh  armstrong.sh  armstrongrange.sh  case.sh  cube.sh  diamond.sh  divby9.sh  evenodd(1).sh  evenodd.sh  factorial.sh  fibonacci.sh  floydstriangle.sh  generatetxt.sh  greatestnum.sh  group.txt  harmonicsum.sh  isarmstrong.sh  isprime.sh  multable.sh  naturalnsum.sh  naturalnums  naturalnums.sh  naturalnumsum.sh  nineseries.sh  numpyramid.sh  numreppyramid.sh  oddasterix.sh  oneseries.sh  others.txt  palindrome.sh  pascal.sh  perfectnum.sh  pernumrange.sh  primeno.sh  primeno.sh.save  reverseorder.sh  starinpattern.sh  (+13 more)
SQL/: README.md  additional allowance.sql  avg sal.sql  ctc.sql  demos day.txt  emp cursor.sql  end moule practice 1.txt  end moule practice 2.txt  get_cnt_deptno.sql  inccnt.sql  insrec.sql  joins.sql  triggers.sql  update emp sal.sql  update sal with exp.sql
Technical Presentation/: app.py
Technical Presentation/Backup/: AJAXusingJQuery.html  pyproject.toml
Technical Presentation/Backup/nodeapp/static/: styles.css
WPT/: index.html
(+512 files in other folders)
