[tool.poetry]
name = "random_wiki"
version = "0.1.0"
description = ""
authors = ["vaylon-fernandes <vaylonfernandes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
